# quadruped-Isaacsim

./: README.md
src/robot_simulation/robot_description/: package.xml
src/robot_simulation/robot_description/config/: robot_controller.yaml
src/robot_simulation/robot_description/launch/: gazebo.launch.py
src/robot_simulation/robot_description/robot/: robot.sdf  robot.urdf
