<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_description</name>
  <version>0.0.1</version>
  <description>Package for robot description and simulation in Gazebo.</description>
  <maintainer email="duckfrost@gmail.com">tgrip</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>urdf</depend>
  <depend>gazebo_ros</depend>
  <depend>xacro</depend>
  <depend>rclpy</depend>
  <depend>ros2launch</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export -->
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_model_path>${prefix}/share/robot_description</gazebo_model_path>
    <gazebo_ros gazebo_model_path = "//home/ashy/quadruped_robot_ROS2/install/robot_description/share/robot_description/model"/>
  </export>
</package>

